# rawr

./: .gitignore  CMakeLists.txt  README.md  Rawr.Build.cs  RawrDSO.Build.cs
cmake/: client.pem  rawr_folders.cmake
include/rawr/: Audio.h  Call.h  Codec.h  Endpoint.h  Net.h  Platform.h  RingBuffer.h  Stun.h  app.h  audio.h  barrier.h  buf.h  call.h  dso.h  endpoint.h  error.h  net.h  opus.h  pa.h  platform.h  ring.h  stun.h  term.h  util.h
src/: AudioPA.c  AudioPS5.c  Call.c  Codec.c  Endpoint.c  Net.c  RingBuffer.c  Stun.c  Util.c  app.c  audio.c  buf.c  call.c  endpoint.c  net.c  opus.c  pa.c  playground_pa.c  rawr_term.c  rawr_term.h  ring.c  stun.c  term.c  util.c
src/SocketSubsystem/: InternetAddr.cpp  InternetAddr.h  Socket.h  SocketSubsystem.cpp  SocketSubsystem.h  Types.h
src/dso/: dso.c
src/playground/call/: playground_call.c
src/playground/juice/: playground_juice.c
src/playground/lws/: playground_lws.c
src/playground/pa/: playground_pa.c  playground_pa_callbacks.c
src/playground/ps5/: playground_ps5.c
src/playground/re/: playground_dtls.c  playground_ice.c  playground_re_sip.c  playground_signal.cpp  playground_stun.c  playground_tcp.c  playground_udp.c  playground_ws.c
src/playground/srtp/: playground_srtp.c  playground_srtp.h  playground_srtp_recv.c  playground_srtp_send.c  playground_srtp_sendrecv.c  playground_srtp_siprecv.c  rtp.c  rtp.h
src/playground/strophe/: playground_strophe.c
src/playground/ui/: playground_ui.c
src/signaller/: PeerManager.cpp  PeerManager.h  SignalChannel.h  SignalPeer.h  main.cpp
src/signallerTestClient/: main.cpp
